--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -180,6 +180,71 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 73: Crie uma tupla preenchida com os 20 primeiros colocados da\n",
+        "# Tabela do Campeonato Brasileiro de Futebol, na ordem de colocação. Depois mostre:\n",
+        "# a) Os 5 primeiros times.\n",
+        "# b) Os últimos 4 colocados.\n",
+        "# c) Times em ordem alfabética.\n",
+        "# d) Em que posição está o time da Chapecoense, [Avaí] para esse caso\n",
+        "# by geanclm in 20/03/2022 at 10:25h\n",
+        "\n",
+        "times = ('América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí', 'Botafogo',\n",
+        "         'Bragantino', 'Ceará', 'Corinthians', 'Coritiba', 'Cuiabá', 'Flamengo', 'Fluminense',\n",
+        "         'Fortaleza', 'Goiás', 'Internacional', 'Palmeiras', 'Santos', 'São Paulo', 'Juventude')\n",
+        "\n",
+        "print ('-'*46)\n",
+        "print (f'''DOS TIMES DO BRASILEIRÃO\n",
+        "{times[:]}''')\n",
+        "\n",
+        "print ('-'*46)\n",
+        "print (f'''Os cinco primeiros colocados da lista\n",
+        "{times[:5]}''')\n",
+        "\n",
+        "print ('-'*33)\n",
+        "print (f'''Os quatro últimos colocados da lista\n",
+        "{times[-4:]}''')\n",
+        "\n",
+        "print ('-'*33)\n",
+        "print(f'''Ordem alfabética\n",
+        "{(sorted(times))}''')\n",
+        "\n",
+        "print ('-'*33)\n",
+        "print (f'O Avaí está na {(times.index(\"Avaí\",1)+1)}ª posição da tabela')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7keiGA_uZNqo",
+        "outputId": "685a4db3-ca5c-4f5f-8673-b37176a4f807"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------\n",
+            "DOS TIMES DO BRASILEIRÃO\n",
+            "('América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí', 'Botafogo', 'Bragantino', 'Ceará', 'Corinthians', 'Coritiba', 'Cuiabá', 'Flamengo', 'Fluminense', 'Fortaleza', 'Goiás', 'Internacional', 'Palmeiras', 'Santos', 'São Paulo', 'Juventude')\n",
+            "----------------------------------------------\n",
+            "Os cinco primeiros colocados da lista\n",
+            "('América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí')\n",
+            "---------------------------------\n",
+            "Os quatro últimos colocados da lista\n",
+            "('Palmeiras', 'Santos', 'São Paulo', 'Juventude')\n",
+            "---------------------------------\n",
+            "Ordem alfabética\n",
+            "['América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí', 'Botafogo', 'Bragantino', 'Ceará', 'Corinthians', 'Coritiba', 'Cuiabá', 'Flamengo', 'Fluminense', 'Fortaleza', 'Goiás', 'Internacional', 'Juventude', 'Palmeiras', 'Santos', 'São Paulo']\n",
+            "---------------------------------\n",
+            "O Avaí está na 5ª posição da tabela\n"
+          ]
+        }
+      ]
     }
   ]
 }
