--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -216,32 +216,54 @@
         "print (f'O Avaí está na {(times.index(\"Avaí\",1)+1)}ª posição da tabela')"
       ],
       "metadata": {
+        "id": "7keiGA_uZNqo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 074: Crie um programa que vai gerar cinco números aleatórios\n",
+        "# e colocar em uma tupla. Depois disso, mostre a listagem de números gerados\n",
+        "# e também indique o menor e o maior valor que estão na tupla.\n",
+        "# by geanclm in 21/03/2022 at 07:18h\n",
+        "from random import sample\n",
+        "tupla = sample(range(1, 61),5)\n",
+        "maior = menor = 0\n",
+        "\n",
+        "for i in tupla:\n",
+        "    if menor == 0:\n",
+        "        menor = i\n",
+        "    if i < menor:\n",
+        "        menor = i\n",
+        "    if i > maior:\n",
+        "        maior = i\n",
+        "\n",
+        "print (f'NÚMEROS gerados na tupla: {tupla}')\n",
+        "print (f'MAIOR número da sequência: {maior}')\n",
+        "print (f'MENOR número da sequência: {menor}')\n",
+        "print ('-'*33)\n",
+        "print (f'ORDEM CRESCENTE da sequência: {sorted(tupla)}')"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7keiGA_uZNqo",
-        "outputId": "685a4db3-ca5c-4f5f-8673-b37176a4f807"
+        "id": "L2NS20ng_0wC",
+        "outputId": "84baf44a-5470-4c93-ca42-329f1f7ba265"
       },
-      "execution_count": 47,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "----------------------------------------------\n",
-            "DOS TIMES DO BRASILEIRÃO\n",
-            "('América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí', 'Botafogo', 'Bragantino', 'Ceará', 'Corinthians', 'Coritiba', 'Cuiabá', 'Flamengo', 'Fluminense', 'Fortaleza', 'Goiás', 'Internacional', 'Palmeiras', 'Santos', 'São Paulo', 'Juventude')\n",
-            "----------------------------------------------\n",
-            "Os cinco primeiros colocados da lista\n",
-            "('América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí')\n",
+            "NÚMEROS gerados na tupla: [7, 39, 15, 9, 44]\n",
+            "MAIOR número da sequência: 44\n",
+            "MENOR número da sequência: 7\n",
             "---------------------------------\n",
-            "Os quatro últimos colocados da lista\n",
-            "('Palmeiras', 'Santos', 'São Paulo', 'Juventude')\n",
-            "---------------------------------\n",
-            "Ordem alfabética\n",
-            "['América-MG', 'Athletico-PR', 'Atlético-GO', 'Atlético-MG', 'Avaí', 'Botafogo', 'Bragantino', 'Ceará', 'Corinthians', 'Coritiba', 'Cuiabá', 'Flamengo', 'Fluminense', 'Fortaleza', 'Goiás', 'Internacional', 'Juventude', 'Palmeiras', 'Santos', 'São Paulo']\n",
-            "---------------------------------\n",
-            "O Avaí está na 5ª posição da tabela\n"
+            "ORDEM CRESCENTE da sequência: [7, 9, 15, 39, 44]\n"
           ]
         }
       ]
