--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -229,16 +229,19 @@
         "# e também indique o menor e o maior valor que estão na tupla.\n",
         "# by geanclm in 21/03/2022 at 07:18h\n",
         "from random import sample\n",
-        "tupla = sample(range(1, 61),5)\n",
-        "maior = menor = 0\n",
+        "tupla = sample(range(1, 10),5)\n",
         "\n",
-        "for i in tupla:\n",
-        "    if menor == 0:\n",
-        "        menor = i\n",
-        "    if i < menor:\n",
-        "        menor = i\n",
-        "    if i > maior:\n",
-        "        maior = i\n",
+        "# maior = menor = 0\n",
+        "# for i in tupla:\n",
+        "#     if menor == 0:\n",
+        "#         menor = i\n",
+        "#     if i < menor:\n",
+        "#         menor = i\n",
+        "#     if i > maior:\n",
+        "#         maior = i\n",
+        "\n",
+        "maior = max(tupla)\n",
+        "menor = min(tupla)\n",
         "\n",
         "print (f'NÚMEROS gerados na tupla: {tupla}')\n",
         "print (f'MAIOR número da sequência: {maior}')\n",
@@ -251,19 +254,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L2NS20ng_0wC",
-        "outputId": "84baf44a-5470-4c93-ca42-329f1f7ba265"
+        "outputId": "5739e38d-e8fd-4500-bd31-6f6096ee9aa8"
       },
-      "execution_count": 18,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "NÚMEROS gerados na tupla: [7, 39, 15, 9, 44]\n",
-            "MAIOR número da sequência: 44\n",
-            "MENOR número da sequência: 7\n",
+            "NÚMEROS gerados na tupla: [3, 4, 6, 7, 9]\n",
+            "MAIOR número da sequência: 9\n",
+            "MENOR número da sequência: 3\n",
             "---------------------------------\n",
-            "ORDEM CRESCENTE da sequência: [7, 9, 15, 39, 44]\n"
+            "ORDEM CRESCENTE da sequência: [3, 4, 6, 7, 9]\n"
           ]
         }
       ]
