--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -256,7 +256,7 @@
         "id": "L2NS20ng_0wC",
         "outputId": "5739e38d-e8fd-4500-bd31-6f6096ee9aa8"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,6 +267,68 @@
             "MENOR número da sequência: 3\n",
             "---------------------------------\n",
             "ORDEM CRESCENTE da sequência: [3, 4, 6, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://www.cursoemvideo.com/apoie/\n",
+        "# Exercício Python 075: Desenvolva um programa que leia quatro valores pelo teclado\n",
+        "# e guarde-os em uma tupla. No final, mostre:\n",
+        "# A) Quantas vezes apareceu o valor 9.\n",
+        "# B) Em que posição foi digitado o primeiro valor 3.\n",
+        "# C) Quais foram os números pares.\n",
+        "# by geanclm in 22/03/2022 at 07:06h\n",
+        "\n",
+        "\n",
+        "tupla = (\n",
+        "    int(input('digite o primeiro número inteiro: ' )),\n",
+        "    int(input('digite o seguento número inteiro: ' )),\n",
+        "    int(input('digite o tereceiro número inteiro: ' )),\n",
+        "    int(input('digite o último número: ' ))\n",
+        "    )\n",
+        "\n",
+        "# visualização dos resultados finais\n",
+        "print ('-'*33)\n",
+        "print (f'Valores registrados na tupla: {tupla}')\n",
+        "print ('-'*33)\n",
+        "\n",
+        "# verificação e visualização da entrada dos dados\n",
+        "if 9 in tupla:\n",
+        "    print (f'O número 9 apareceu {tupla.count(9)} vez(es)')\n",
+        "else:\n",
+        "    print ('O número 9 não foi registrado na tupla!')\n",
+        "if 3 in tupla:\n",
+        "    print (f'O número 3 está na posição {tupla.index(3,1)+1}ª da tupla')\n",
+        "else:\n",
+        "    print ('O número 3 não foi registrado na tupla!')\n",
+        "print (f'A tupla tem os seguintes números pares: {[i for i in tupla if i%2 == 0]}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wnqECvsC8h4I",
+        "outputId": "e2dd23e7-4664-4db0-e6da-287e1ffd4859"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o primeiro número inteiro: 1\n",
+            "digite o seguento número inteiro: 2\n",
+            "digite o tereceiro número inteiro: 4\n",
+            "digite o último número: 6\n",
+            "---------------------------------\n",
+            "Valores registrados na tupla: (1, 2, 4, 6)\n",
+            "---------------------------------\n",
+            "O número 9 não foi registrado na tupla!\n",
+            "O número 3 não foi registrado na tupla!\n",
+            "A tupla tem os seguintes pares: [2, 4, 6]\n"
           ]
         }
       ]
