--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -313,7 +313,7 @@
         "id": "wnqECvsC8h4I",
         "outputId": "e2dd23e7-4664-4db0-e6da-287e1ffd4859"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,6 +329,59 @@
             "O número 9 não foi registrado na tupla!\n",
             "O número 3 não foi registrado na tupla!\n",
             "A tupla tem os seguintes pares: [2, 4, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 076: Crie um programa que tenha uma tupla única com\n",
+        "# nomes de produtos e seus respectivos preços, na sequência.\n",
+        "# No final, mostre uma listagem\n",
+        "# de preços, organizando os dados em forma tabular.\n",
+        "# by geanclm in 23/03/2022 at 06:46h\n",
+        "\n",
+        "produtos = ('lápis',1.75, 'borracha', 2, 'Caderno', 15.90, 'Estojo', 25.00,\n",
+        "            'Tranferidor', 4.2, 'Compasso', 9.9, 'Mochila', 120.3,\n",
+        "            'Canetas', 22.30, 'Livro', 34.9)\n",
+        "\n",
+        "print ('-'*33)\n",
+        "print ('{:-^33}'.format('| LISTAGEM DE PREÇOS |'))\n",
+        "print ('-'*33)\n",
+        "for i in (range(0,len(produtos))):\n",
+        "    if i%2==0:\n",
+        "        print (f'{produtos[i]:.<23}', end=' ')\n",
+        "    elif i%2!=0:\n",
+        "        print (f'R${produtos[i]:>7,.2f}')\n",
+        "print ('-'*33)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "10Pf53BoEGv1",
+        "outputId": "4cd65fa2-1d5f-4821-9539-8bcba6218586"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------------------------------\n",
+            "-----| LISTAGEM DE PREÇOS |------\n",
+            "---------------------------------\n",
+            "lápis.................. R$   1.75\n",
+            "borracha............... R$   2.00\n",
+            "Caderno................ R$  15.90\n",
+            "Estojo................. R$  25.00\n",
+            "Tranferidor............ R$   4.20\n",
+            "Compasso............... R$   9.90\n",
+            "Mochila................ R$ 120.30\n",
+            "Canetas................ R$  22.30\n",
+            "Livro.................. R$  34.90\n",
+            "---------------------------------\n"
           ]
         }
       ]
