--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -357,34 +357,40 @@
         "print ('-'*33)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "10Pf53BoEGv1",
-        "outputId": "4cd65fa2-1d5f-4821-9539-8bcba6218586"
+        "id": "10Pf53BoEGv1"
       },
-      "execution_count": 106,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "---------------------------------\n",
-            "-----| LISTAGEM DE PREÇOS |------\n",
-            "---------------------------------\n",
-            "lápis.................. R$   1.75\n",
-            "borracha............... R$   2.00\n",
-            "Caderno................ R$  15.90\n",
-            "Estojo................. R$  25.00\n",
-            "Tranferidor............ R$   4.20\n",
-            "Compasso............... R$   9.90\n",
-            "Mochila................ R$ 120.30\n",
-            "Canetas................ R$  22.30\n",
-            "Livro.................. R$  34.90\n",
-            "---------------------------------\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 077: Crie um programa que tenha uma tupla com várias palavras\n",
+        "# (não usar acentos). Depois disso, você deve mostrar, para cada palavra, quais são as suas vogais.\n",
+        "# by geanclm in 24/03/2022 at 07:01h\n",
+        "\n",
+        "tupla = ('motocicleta','CARRO', 'CASA', 'MOTO', 'BARCO', 'BICICLETA', 'TREM', 'UBER')\n",
+        "for i in tupla:\n",
+        "    print (f'\\nNa palavra {i} temos:', end=' ')\n",
+        "    # if 'A' in i:\n",
+        "    #     print ('a', end=' ')\n",
+        "    # if 'E' in i:\n",
+        "    #     print ('e', end=' ')\n",
+        "    # if 'I' in i:\n",
+        "    #     print ('i', end=' ')\n",
+        "    # if 'O' in i:\n",
+        "    #     print ('o', end=' ')\n",
+        "    # if 'U' in i:\n",
+        "    #     print ('u', end=' ')\n",
+        "    for letra in i:\n",
+        "        if letra in 'aeiouAEIOU':\n",
+        "            print (letra, end=' ')"
+      ],
+      "metadata": {
+        "id": "JSlF_M2sSYA2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
