listas em python
exercício  078

--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -6,7 +6,8 @@
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "Iv1JvJMxr_3l"
+        "Iv1JvJMxr_3l",
+        "ORH0FziVvh-Q"
       ]
     },
     "kernelspec": {
@@ -391,6 +392,268 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 17 – Listas (Parte 1)"
+      ],
+      "metadata": {
+        "id": "RWEDdX2metCk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista01 = []"
+      ],
+      "metadata": {
+        "id": "eSIeg5VStC57"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista02 = list()"
+      ],
+      "metadata": {
+        "id": "yzpGXuGAtGW7"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = ['gean', 'carlos', 'cientista', 'dados', 'machine learning', 'dados']"
+      ],
+      "metadata": {
+        "id": "qK0fxMDwjuba"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista"
+      ],
+      "metadata": {
+        "id": "cKf6J7Fdj5QK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# del lista[3]\n",
+        "# lista.pop(4)\n",
+        "lista.remove('dados')"
+      ],
+      "metadata": {
+        "id": "ewWnwahPjc_r"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 'dados' in lista:\n",
+        "    lista.remove('dados')\n",
+        "else:\n",
+        "    print ('dados inexistentes')"
+      ],
+      "metadata": {
+        "id": "zbFfRGpblubz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "valores = list(range(1,26,5))"
+      ],
+      "metadata": {
+        "id": "qB_LYmkvorGL"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (valores, end=' ')"
+      ],
+      "metadata": {
+        "id": "C0NF7UcVov-0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista2 = [2,9,8,1,6,0,7,2,3]"
+      ],
+      "metadata": {
+        "id": "JovndDMmpNeU"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista2"
+      ],
+      "metadata": {
+        "id": "q9n0bjUFr1Ob"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sorted(lista2, reverse=True))"
+      ],
+      "metadata": {
+        "id": "Cd1Ioe77plzF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(lista2)"
+      ],
+      "metadata": {
+        "id": "K8y48x0tqM70"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista2.append(999)"
+      ],
+      "metadata": {
+        "id": "uPEnKuazrQt6"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista2.insert(1,888)"
+      ],
+      "metadata": {
+        "id": "rNyFY5ASrvyl"
+      },
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "valores = []\n",
+        "for i in range(0,2):\n",
+        "    valores.append(input('digite um números: '))\n",
+        "print('-'*15)\n",
+        "for i,n in enumerate(valores):\n",
+        "    print (i,n)"
+      ],
+      "metadata": {
+        "id": "b3L31m7iuPTi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1,2,3,4,5]\n",
+        "b = a[:]\n",
+        "b[2] = 888\n",
+        "print(f'lista a: {a}')\n",
+        "print(f'lista a: {b}')"
+      ],
+      "metadata": {
+        "id": "K5fvt0B6wEMC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://docs.python.org/pt-br/3/tutorial/datastructures.html?highlight=tupla\n",
+        "\n",
+        "# Exercício Python 078: Faça um programa que leia 5 valores numéricos e guarde-os em uma lista.\n",
+        "# No final, mostre qual foi o maior e o menor valor digitado e as suas respectivas posições na lista.\n",
+        "# by geanclm in 25/03/2022 at 09:12h\n",
+        "\n",
+        "lista = []\n",
+        "maior = menor = 0\n",
+        "\n",
+        "for i in range(0,5):\n",
+        "    lista.append(int(input(f'digite um valor na posição {i}: ')))\n",
+        "    if menor == 0:\n",
+        "        menor = lista[i]\n",
+        "    if lista[i] > maior:\n",
+        "        maior = lista[i]\n",
+        "    if lista[i] < menor:\n",
+        "        menor = lista[i]\n",
+        "\n",
+        "print('-'*15)        \n",
+        "print(f'LISTA completa:', end=' ')\n",
+        "for i in lista:\n",
+        "    print(f'{i}', end=' ')\n",
+        "print('\\n')\n",
+        "\n",
+        "print(f'MENOR valor digitado: {menor}, posição(ões)', end=' ')\n",
+        "for i,n in enumerate(lista):\n",
+        "    if n == menor:\n",
+        "        print(f'{i}... ', end=' ')\n",
+        "print(f'\\nMAIOR valor digitado: {maior}, posição(ões)', end=' ')\n",
+        "for i,n in enumerate(lista):\n",
+        "    if n == maior:\n",
+        "         print(f'{i}... ', end=' ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ztMnjqm6z3p1",
+        "outputId": "d71fb345-c240-4c66-fc21-a79d141f125c"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um valor na posição 0: 1\n",
+            "digite um valor na posição 1: 8\n",
+            "digite um valor na posição 2: 8\n",
+            "digite um valor na posição 3: 2\n",
+            "digite um valor na posição 4: 1\n",
+            "---------------\n",
+            "LISTA completa: 1 8 8 2 1 \n",
+            "\n",
+            "MENOR valor digitado: 1, posição(ões) 0...  4...  \n",
+            "MAIOR valor digitado: 8, posição(ões) 1...  2...  "
+          ]
+        }
+      ]
     }
   ]
 }
