--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -6,8 +6,7 @@
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q"
+        "Iv1JvJMxr_3l"
       ]
     },
     "kernelspec": {
@@ -410,7 +409,7 @@
       "metadata": {
         "id": "eSIeg5VStC57"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +420,7 @@
       "metadata": {
         "id": "yzpGXuGAtGW7"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +431,7 @@
       "metadata": {
         "id": "qK0fxMDwjuba"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +455,7 @@
       "metadata": {
         "id": "ewWnwahPjc_r"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +480,7 @@
       "metadata": {
         "id": "qB_LYmkvorGL"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +502,7 @@
       "metadata": {
         "id": "JovndDMmpNeU"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +546,7 @@
       "metadata": {
         "id": "uPEnKuazrQt6"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +557,7 @@
       "metadata": {
         "id": "rNyFY5ASrvyl"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +634,7 @@
         "id": "ztMnjqm6z3p1",
         "outputId": "d71fb345-c240-4c66-fc21-a79d141f125c"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,6 +650,49 @@
             "\n",
             "MENOR valor digitado: 1, posição(ões) 0...  4...  \n",
             "MAIOR valor digitado: 8, posição(ões) 1...  2...  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 079: Crie um programa onde o usuário possa digitar vários valores\n",
+        "# numéricos e cadastre-os em uma lista. Caso o número já exista lá dentro, ele não será adicionado.\n",
+        "# No final, serão exibidos todos os valores únicos digitados, em ordem crescente.\n",
+        "# by geanclm in 29/03/2022 at 05:30h\n",
+        "\n",
+        "lista = []\n",
+        "while True:\n",
+        "    n = int(input(f'digite um número: '))\n",
+        "    if n not in lista:\n",
+        "        lista.append(n)\n",
+        "    else:\n",
+        "        print (f'valor {n} já existente na lista!')\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S':\n",
+        "        break\n",
+        "print (sorted(lista))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UYWf75eux_ud",
+        "outputId": "a52f6033-ff6e-4c71-c86a-894be3d56643"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número: 5\n",
+            "continua? [S/N]: s\n",
+            "digite um número: 5\n",
+            "valor 5já existente na lista!\n",
+            "continua? [S/N]: n\n",
+            "[5]\n"
           ]
         }
       ]
