--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -675,24 +675,60 @@
         "print (sorted(lista))"
       ],
       "metadata": {
+        "id": "UYWf75eux_ud"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 080: Crie um programa onde o usuário possa digitar cinco valores\n",
+        "# numéricos e cadastre-os em uma lista, já na posição correta de inserção (sem usar o sort()).\n",
+        "# No final, mostre a lista ordenada na tela.\n",
+        "# by geanclm in 03/30/2022 at 07:04h\n",
+        "lista = []\n",
+        "for i in range(0,5):\n",
+        "    n = int(input('digite um número inteiro: '))\n",
+        "    if (i == 0) or (n > lista[-1]):\n",
+        "        lista.append(n)\n",
+        "        print (f'O valor {n} foi inserido no final da lista')\n",
+        "    else:\n",
+        "        c = 0\n",
+        "        while c < len(lista):\n",
+        "            if n <= lista[c]:\n",
+        "                lista.insert(c,n)\n",
+        "                print (f'O valor {n} foi inserido na posição {c} da lista')\n",
+        "                break\n",
+        "            c += 1\n",
+        "print('-'*33)  \n",
+        "print (lista)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "UYWf75eux_ud",
-        "outputId": "a52f6033-ff6e-4c71-c86a-894be3d56643"
+        "id": "ScqC4IcZ9duI",
+        "outputId": "386120a7-8301-4a80-9399-2de8bf0a8c33"
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "digite um número: 5\n",
-            "continua? [S/N]: s\n",
-            "digite um número: 5\n",
-            "valor 5já existente na lista!\n",
-            "continua? [S/N]: n\n",
-            "[5]\n"
+            "digite um número inteiro: 5\n",
+            "O valor 5 foi inserido no final da lista\n",
+            "digite um número inteiro: 2\n",
+            "O valor 2 foi inserido na posição 0 da lista\n",
+            "digite um número inteiro: 1\n",
+            "O valor 1 foi inserido na posição 0 da lista\n",
+            "digite um número inteiro: 4\n",
+            "O valor 4 foi inserido na posição 2 da lista\n",
+            "digite um número inteiro: 3\n",
+            "O valor 3 foi inserido na posição 2 da lista\n",
+            "---------------------------------\n",
+            "[1, 2, 3, 4, 5]\n"
           ]
         }
       ]
