--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -705,33 +705,89 @@
         "print (lista)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ScqC4IcZ9duI",
-        "outputId": "386120a7-8301-4a80-9399-2de8bf0a8c33"
+        "id": "ScqC4IcZ9duI"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "digite um número inteiro: 5\n",
-            "O valor 5 foi inserido no final da lista\n",
-            "digite um número inteiro: 2\n",
-            "O valor 2 foi inserido na posição 0 da lista\n",
-            "digite um número inteiro: 1\n",
-            "O valor 1 foi inserido na posição 0 da lista\n",
-            "digite um número inteiro: 4\n",
-            "O valor 4 foi inserido na posição 2 da lista\n",
-            "digite um número inteiro: 3\n",
-            "O valor 3 foi inserido na posição 2 da lista\n",
-            "---------------------------------\n",
-            "[1, 2, 3, 4, 5]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 081: Crie um programa que vai ler vários números e colocar em uma lista.\n",
+        "# Depois disso, mostre:\n",
+        "# A) Quantos números foram digitados.\n",
+        "# B) A lista de valores, ordenada de forma decrescente.\n",
+        "# C) Se o valor 5 foi digitado e está ou não na lista.\n",
+        "# by geanclm in 02/04/2022 at 06:51h\n",
+        "lista = []\n",
+        "while True:\n",
+        "    lista.append(int(input(f'digite um número: ')))\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S': break\n",
+        "print('-'*33)\n",
+        "print (f'lista de números: {lista}')\n",
+        "print (f'quantidade de números: {len(lista)}')\n",
+        "print (f'ordem decrescente: {sorted(lista, reverse=True)}')\n",
+        "if 5 in lista:\n",
+        "    print ('O número 5 está na lista')\n",
+        "else:\n",
+        "    print ('O valor 5 não foi encontrado da lista')"
+      ],
+      "metadata": {
+        "id": "Vv1_BW3XnRqX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 082: Crie um programa que vai ler vários números e colocar em uma lista.\n",
+        "# Depois disso, crie duas listas extras que vão conter apenas os valores pares e os valores\n",
+        "# ímpares digitados, respectivamente. Ao final, mostre o conteúdo das três listas geradas.\n",
+        "# by geanclm in 02/04/2022 at 07:26h\n",
+        "lista = pares = ímpares = []\n",
+        "while True:\n",
+        "    lista.append(int(input(f'digite um número: ')))\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S': break\n",
+        "for i in lista:\n",
+        "    if i%2 == 0:\n",
+        "        pares.append(i)\n",
+        "    else:\n",
+        "        ímpares.append(i)\n",
+        "print('-'*33)\n",
+        "print(f'lista completa: {lista}')\n",
+        "print(f'pares: {pares}')\n",
+        "print(f'ímpares: {ímpares}')"
+      ],
+      "metadata": {
+        "id": "IgGJ4TUAxXQ0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 083: Crie um programa onde o usuário digite uma expressão qualquer que use parênteses.\n",
+        "# Seu aplicativo deverá analisar se a expressão passada está com os parênteses abertos\n",
+        "# e fechados na ordem correta.\n",
+        "# by geanclm in 02/04/2022 at 08:28h\n",
+        "lista = []\n",
+        "expr = str(input(f'digite uma expressão matemática: '))\n",
+        "for i in expr:\n",
+        "    lista.append(i)\n",
+        "if (lista.count('(')) == lista.count(')'):\n",
+        "    print ('EXPRESSÃO VÁLIDA')\n",
+        "else:\n",
+        "    print ('EXPRESSÃO INVÁLIDA')"
+      ],
+      "metadata": {
+        "id": "3pfgnKzs2MyS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
