--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -6,7 +6,9 @@
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "Iv1JvJMxr_3l"
+        "Iv1JvJMxr_3l",
+        "ORH0FziVvh-Q",
+        "RWEDdX2metCk"
       ]
     },
     "kernelspec": {
@@ -785,6 +787,132 @@
       ],
       "metadata": {
         "id": "3pfgnKzs2MyS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 18 – Listas (Parte 2)"
+      ],
+      "metadata": {
+        "id": "QOCxu-_Q0ili"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe1 =[['geanclm', 11],['gclm', 22],['clm', 33],['lm', 44]]\n",
+        "equipe2 =[['Gean', 10],['Carlos', 20],['Luciano', 30],['Madeira', 40]]"
+      ],
+      "metadata": {
+        "id": "FXOT2GFjGGhK"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "galera[0][0]"
+      ],
+      "metadata": {
+        "id": "wWEpllJRGjoa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in equipe1:\n",
+        "    print (f'name: {i[0]} code: {i[1]}')"
+      ],
+      "metadata": {
+        "id": "RfiyytctI5Ny"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe2.append(equipe1[:])"
+      ],
+      "metadata": {
+        "id": "1HrPOcjcG-e7"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe2"
+      ],
+      "metadata": {
+        "id": "y2UCRaz8HdCy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe2[4][0][0]"
+      ],
+      "metadata": {
+        "id": "0R9vN48hH1EP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in equipe2:\n",
+        "    print (i[0])"
+      ],
+      "metadata": {
+        "id": "EaRHG7Y9IenC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados = []\n",
+        "for i in range(0,3):\n",
+        "    dados.append(str(input('nome: ')))\n",
+        "    dados.append(int(input('idade: ')))\n",
+        "    equipe2.append(dados[:])\n",
+        "    dados.clear()"
+      ],
+      "metadata": {
+        "id": "CPAmfdfJJ_mS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "menor = maior = 0\n",
+        "for j in equipe1:\n",
+        "    if j[1] >= 21:\n",
+        "        print (f'{j[0]} tem code acima de 21')\n",
+        "        maior += 1\n",
+        "    else:\n",
+        "        print (f'{j[0]} tem code abaixo de 21')\n",
+        "        menor += 1\n",
+        "print ('-'*33)\n",
+        "print (f'TOTAL DE CODE ACIMA DE 21: {maior}')\n",
+        "print (f'TOTAL DE CODE ABAIXO DE 21: {menor}')"
+      ],
+      "metadata": {
+        "id": "ZMT-a-BeLgDB"
       },
       "execution_count": null,
       "outputs": []
