--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "collapsed_sections": [
         "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q",
-        "RWEDdX2metCk"
+        "ORH0FziVvh-Q"
       ]
     },
     "kernelspec": {
@@ -809,7 +808,7 @@
       "metadata": {
         "id": "FXOT2GFjGGhK"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -818,10 +817,27 @@
         "galera[0][0]"
       ],
       "metadata": {
-        "id": "wWEpllJRGjoa"
+        "id": "wWEpllJRGjoa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 172
+        },
+        "outputId": "5d9a894a-237d-42b5-9f63-1f7f64c5afac"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-b356134cb56c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgalera\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'galera' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -843,7 +859,7 @@
       "metadata": {
         "id": "1HrPOcjcG-e7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -891,10 +907,59 @@
         "    dados.clear()"
       ],
       "metadata": {
-        "id": "CPAmfdfJJ_mS"
+        "id": "CPAmfdfJJ_mS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef1cadd2-82b7-4b7d-a13a-7a4669e78ad3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "nome: Gean\n",
+            "idade: 46\n",
+            "nome: Carlos\n",
+            "idade: 47\n",
+            "nome: Luciano\n",
+            "idade: 48\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LFL3gQWKGycT",
+        "outputId": "d585765c-563b-452c-cb21-9738384924db"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['Gean', 10],\n",
+              " ['Carlos', 20],\n",
+              " ['Luciano', 30],\n",
+              " ['Madeira', 40],\n",
+              " ['Gean', 46],\n",
+              " ['Carlos', 47],\n",
+              " ['Luciano', 48]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -913,6 +978,60 @@
       ],
       "metadata": {
         "id": "ZMT-a-BeLgDB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Exercício Python 084: Faça um programa que leia nome e peso de várias pessoas,                                      guardando tudo em uma lista. No final, mostre:                                                                                                    A) Quantas pessoas foram cadastradas.                                                                                                                B) Uma listagem com as pessoas mais pesadas.                                                                                                    C) Uma listagem com as pessoas mais leves."
+      ],
+      "metadata": {
+        "id": "4S8kxidqCsgC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 084: Faça um programa que leia nome e peso de várias pessoas,\n",
+        "# guardando tudo em uma lista. No final, mostre:\n",
+        "# A) Quantas pessoas foram cadastradas.\n",
+        "# B) Uma listagem com as pessoas mais pesadas.\n",
+        "# C) Uma listagem com as pessoas mais leves.\n",
+        "# by geanclm in 05/04/2022 at 15:54h\n",
+        "lista = []\n",
+        "dados = []\n",
+        "maior = menor = 0\n",
+        "while True:\n",
+        "    dados.append(str(input('nome: ')))\n",
+        "    dados.append(float(input('peso: ')))   \n",
+        "    if len(lista) == 0:\n",
+        "        maior = menor = dados[1]\n",
+        "    else:\n",
+        "        if dados[1] < menor:\n",
+        "            menor = dados[1]\n",
+        "        if dados[1] > maior:\n",
+        "            maior = dados[1]\n",
+        "    lista.append(dados[:])\n",
+        "    dados.clear()\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S': break\n",
+        "print ('-'*33)\n",
+        "print (f'TOTAL DE PESSOAS CADASTRADAS: {len(lista)}')\n",
+        "print (f'PESSOA(S) MAIS PESADA(S): {maior} Kg', end=' ')\n",
+        "for i in lista:\n",
+        "    if i[1] == maior:\n",
+        "        print (f'[{i[0]}]')\n",
+        "print (f'PESSOA(S) MAIS LEVE(S): {menor} Kg', end=' ')\n",
+        "for i in lista:\n",
+        "    if i[1] == menor:\n",
+        "        print (f'[{i[0]}]')"
+      ],
+      "metadata": {
+        "id": "h7WCPN5gDXSC"
       },
       "execution_count": null,
       "outputs": []
